# reef-tools

./: .gitignore  404.html  LICENSE  README.md  confluence-overview.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  index.md
docs/api/: index.md
docs/examples/data/: lerderderg_annual.csv
docs/modules/: climate.md  io.md  stats.md  utils.md  viz.md  water_quality.md
examples/: stationarity_demo.ipynb
getting-started/: index.html
modules/climate/: index.html
modules/io/: index.html
modules/stats/: index.html
modules/utils/: index.html
modules/viz/: index.html
modules/water_quality/: index.html
search/: search_index.json
src/reef_tools/: __init__.py  _version.py
src/reef_tools/climate/: __init__.py  silo.py
src/reef_tools/io/: __init__.py  csv_helpers.py
src/reef_tools/stats/: __init__.py  stationarity.py
src/reef_tools/utils/: __init__.py  decorators.py
src/reef_tools/viz/: __init__.py
src/reef_tools/water_quality/: __init__.py  mapping.py  reporting.py  tahbil.py
tests/: conftest.py
tests/test_climate/: test_silo.py
tests/test_io/: test_csv_helpers.py
tests/test_utils/: test_decorators.py
