[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reef-tools"
dynamic = ["version"]
description = "Modular Python package for reef and water quality analysis — shared utilities for the DETSI group"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Frederick Bennett", email = "frederick.bennett@des.qld.gov.au"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["reef", "water-quality", "climate", "analysis", "detsi"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
netcdf = ["xarray>=2023.0", "netCDF4>=1.6"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "reef-tools[netcdf,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/frbennett/reef-tools"
Documentation = "https://frbennett.github.io/reef-tools/"
Repository = "https://github.com/frbennett/reef-tools.git"
Issues = "https://github.com/frbennett/reef-tools/issues"

[tool.hatch.version]
path = "src/reef_tools/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reef_tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/tests",
    "/.github",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "mkdocs.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["reef_tools"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.mkdocstrings]
default_handler = "python"

[tool.mkdocstrings.python]
options = []
