[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reef-tools"
dynamic = ["version"]
description = "Modular Python package for reef and water quality analysis — shared utilities for the DETSI group"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Frederick Bennett", email = "frederick.bennett@des.qld.gov.au"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["reef", "water-quality", "climate", "analysis", "detsi"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
netcdf = ["xarray>=2023.0", "netCDF4>=1.6"]
climate = [
    "reef-tools[netcdf]",
    "s3fs>=2023.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "tqdm>=4.65",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
all = [
    "reef-tools[netcdf,climate,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/frbennett/reef-tools"
Documentation = "https://frbennett.github.io/reef-tools/"
Repository = "https://github.com/frbennett/reef-tools.git"
Issues = "https://github.com/frbennett/reef-tools/issues"

[tool.hatch.version]
path = "src/reef_tools/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reef_tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/tests",
    "/.github",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "mkdocs.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["reef_tools"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "s3fs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shapely.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geopandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xarray"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "h5netcdf"
ignore_missing_imports = true

[tool.mkdocstrings]
default_handler = "python"

[tool.mkdocstrings.python]
options = []
